--- a/maculele.html
+++ b/maculele.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
-	<link rel="stylesheet" href="maculele.css">
+	<link rel="stylesheet" href="songs.css">
 	<script src="" defer></script>
 
 </head>
@@ -60,112 +60,137 @@
 		</header>
 	</section>
 
-	<section class="maculele">
-		<h1 class="heading"><span>Maculele</span></h1>
-		<section class="basic" id="basic">
+	<h1 class="heading"><span>Maculele</span></h1>
+	<div class="container">
 
-			<div class="row">
+
+		<div class="main-video">
+			<div class="video">
 				<iframe src="https://www.youtube.com/embed/aPDpDdy2GcE?si=A01wxHwl3nfyE36B" frameborder="0" loading="lazy"></iframe>
-				<h3>Etapa básica</h3>
+				<h3 class="title">Etapa básica</h3>
 			</div>
+		</div>
 
-			<div class="row">
+
+		<div class="video-list">
+
+			<div class="vid active">
 				<iframe src="https://www.youtube.com/embed/Tpb3oFFbX84?si=p_mNMTXkRmvhNE0Q" frameborder="0" loading="lazy"></iframe>
-				<h3>Reversão</h3>
+				<h3 class="title">Reversão</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/W7sHIdYYDJY?si=khFVgwYADJWjDQmh" frameborder="0" loading="lazy"></iframe>
-				<h3>Asas</h3>
+				<h3 class="title">Asas</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/9sYN3MFEKog?si=EQQkM74AU1tPpzq1" frameborder="0" loading="lazy"></iframe>
-				<h3>Posando</h3>
+				<h3 class="title">Posando</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/xUO-lQz573g?si=RvKHIBVDRc6FHKfA" frameborder="0" loading="lazy"></iframe>
-				<h3>Encruzilhada</h3>
+				<h3 class="title">Encruzilhada</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/l3k7wGUI-VM?si=W7-Jy-DWGp_-DVbI" frameborder="0" loading="lazy"></iframe>
-				<h3>Metade</h3>
+				<h3 class="title">Metade</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/_FVj2Mvfghg?si=jL-Vz7naamOTVExt" frameborder="0" loading="lazy"></iframe>
-				<h3>Batismo</h3>
+				<h3 class="title">Batismo</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/nxamGwdF824?si=p5-mxs5eSyUGAqMq" frameborder="0" loading="lazy"></iframe>
-				<h3>Xamã</h3>
+				<h3 class="title">Xamã</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/khh78bFj0T4?si=q37gGowMMlZODI5x" frameborder="0" loading="lazy"></iframe>
-				<h3>Arco</h3>
+				<h3 class="title">Arco</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/IUMJUOtztO4?si=gKCJqFPGTi92cNkH" frameborder="0" loading="lazy"></iframe>
-				<h3>Pião</h3>
+				<h3 class="title">Pião</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/cC2r-AKnBqc?si=n1pRB-8BGmzHli54" frameborder="0" loading="lazy"></iframe>
-				<h3>Cancan</h3>
+				<h3 class="title">Cancan</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/Zzqe-o5fwgM?si=-bHpWtqxJXutoMNA" frameborder="0" loading="lazy"></iframe>
-				<h3>Indiano</h3>
+				<h3 class="title">Indiano</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/ZTSGizd3czU?si=ctUs8ahyQ9_8Kgrm" frameborder="0" loading="lazy"></iframe>
-				<h3>Conan</h3>
+				<h3 class="title">Conan</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/PkcBGg_OVXE?si=wdbngZJbhK4oJqwb" frameborder="0" loading="lazy"></iframe>
-				<h3>Voltar</h3>
+				<h3 class="title">Voltar</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/N3m4g74ZxZE?si=-q9tshzWXXf-OuKv" frameborder="0" loading="lazy"></iframe>
-				<h3>Menina</h3>
+				<h3 class="title">Menina</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/yq8vEMum1jA?si=88hi_Xp9opvcfUnM" frameborder="0" loading="lazy"></iframe>
-				<h3>Indiana</h3>
+				<h3 class="title">Indiana</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/mYOE7UGQlFc?si=2idv2rdY29clWDuO" frameborder="0" loading="lazy"></iframe>
-				<h3>Pirâmide</h3>
+				<h3 class="title">Pirâmide</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/38yLyfUFgE4?si=_gDFtpsked48zqYX" frameborder="0" loading="lazy"></iframe>
-				<h3>Estrela</h3>
+				<h3 class="title">Estrela</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/81NfKu41R14?si=xo2ABqoYpXHJYAge" frameborder="0" loading="lazy"></iframe>
-				<h3>Hopak</h3>
+				<h3 class="title">Hopak</h3>
 			</div>
 
-			<div class="row">
+			<div class="vid">
 				<iframe src="https://www.youtube.com/embed/2Lq8hAbBEb0?si=LVz_Nwpm05v4KfBT" frameborder="0" loading="lazy"></iframe>
-				<h3>Bandeira</h3>
+				<h3 class="title">Bandeira</h3>
 			</div>
 
-	   </section>
-	</section>
+		</div>
+
+	</div>
+
+	<script>
+		let listVideo = document.querySelectorAll('.video-list .vid');
+		let mainVideo = document.querySelector('.main-video iframe');
+		let title = document.querySelector('.main-video .title');
+
+		listVideo.forEach(video =>{
+			video.onclick = () =>{
+				listVideo.forEach(vid => vid.classList.remove('active'));
+				video.classList.add('active');
+				if(video.classList.contains('active')){
+					let src = video.children[0].getAttribute('src');
+					mainVideo.src = src;
+					let text = video.children[1].innerHTML;
+					title.innerHTML = text;
+				};
+			};
+		});
+	</script>
 
 	 <!--footer section starts-->
 
