--- a/interview.html
+++ b/interview.html
@@ -146,10 +146,33 @@
 			});
 		</script>
 
-		 <!--footer section starts-->
 
-	
-		<!--footer section ends-->
+	 <!--footer section starts-->
+
+	 <section class="footer" id="footer">
+
+		<div class="share">
+			<a href="https://t.me/senzala_news"><img style="height: 35px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png"></a>
+			<a href="https://www.youtube.com/@AnisimIlinskyi8/featured"><img style="height: 35px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/4494/4494485.png"></a>
+			<a href="https://www.facebook.com/anisim.ilinskyi"><img style="height: 35px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/174/174848.png"></a>
+			<a href="https://www.instagram.com/anisim_capoeira/"><img style="height: 35px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"></a>
+			<a href="https://senzala.com.ua/"><img style="height: 35px; width: auto;" src="https://static.wixstatic.com/media/8e20e3_a7748ace886e4be7a8e491277ec17e36~mv2.png/v1/fill/w_138,h_140,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/8e20e3_ce47282406f64a23a1014f7f70da3aef.png"></a>
+		</div>
+
+		<div class="links">
+			<a href="index.html">Home</a>
+			<a href="basic.html">Basic Info</a>
+			<a href="handbook.html">Handbook</a>
+			<a href="archi.html">Archives</a>
+			<a href="about us.html">About us</a>
+			<a style="margin-right: 3rem;" href="contacts.html">Contacts</a>
+		</div>
+
+		<div class="credit">created by <span>Nightmare_2077</span> |All Rights Reserved</div>
+	</section>
+
+	<!--footer section ends-->
+
 
 </body>
 </html>
