--- a/esquiva_d.html
+++ b/esquiva_d.html
@@ -75,14 +75,14 @@
 
 			<div class="content">
 				<h3 style="margin-top: 1.5rem;">Esquiva Diagonal</h3>
-				<p><b>Execution:</b> Esquiva Diagonal, which translates to "diagonal dodge" in Portuguese, is a defensive movement used to evade attacks from opponents in the Capoeira roda (the circle where the game is played). To perform it, a Capoeirista steps diagonally forward with one foot while lowering their upper body. This movement is used to dodge kicks, sweeps, and other attacks while maintaining balance and positioning for a counterattack.</p>
+				<p><b>Execution:</b> Esquiva Diagonal, which translates to "diagonal dodge" in Portuguese, is a defensive movement used to evade attacks from opponents in the Capoeira roda (the circle where the game is played). To perform it, a Capoeirista steps diagonally backwards with one foot while lowering their upper body. This movement is used to dodge kicks, sweeps, and other attacks while maintaining balance and positioning for a counterattack.</p>
 				<p><b>Variations:</b> Esquiva Diagonal can be performed with variations in depth and style depending on the Capoeirista's preference and regional Capoeira style. Some variations involve deeper lunges, while others are more upright.</p>
 				<p><b>Purpose:</b> The primary purpose of Esquiva Diagonal is to avoid an opponent's attack while positioning oneself for a potential counterattack. It allows the Capoeirista to swiftly change their position in the roda and create openings for offensive moves.</p>
 				<p><b>Training:</b> Capoeiristas practice Esquiva Diagonal to develop agility, timing, and balance. Precision is essential to ensure effective evasion and readiness for a counterattack.</p>
 				<p><b>Combination:</b> In the Capoeira game, Capoeiristas often use Esquiva Diagonal in combination with other movements, such as kicks, spins, and acrobatics. This allows for fluid transitions between defense and offense.</p>
                 <p><b>Safety:</b> Safety is crucial when practicing Esquiva Diagonal, especially in a group or partner setting. Capoeiristas must maintain control to avoid unintentional contact with their training partners.</p>
 				<p><b>Roda Usage:</b> Esquiva Diagonal is a common movement used within the Capoeira roda. Capoeiristas use it to engage opponents, evade attacks, and set the stage for exciting and dynamic exchanges in the game.</p>
-                <p><b>Artistic Expression:</b> Like other Capoeira movements, Esquiva Diagonal is not only a defensive technique but also an expression of the art's cultural and historical context. Capoeiristas use it to showcase their creativity, agility, and fluidity in the roda.</p>
+               
             </div>
 
         </div>
