--- a/negativa.html
+++ b/negativa.html
@@ -75,12 +75,12 @@
 
 			<div class="content">
 				<h3 style="margin-top: 1.5rem;">Negativa</h3>
-				<p><b>Description:</b> Negativa is characterized by a crouched stance with one knee resting on the ground while the other leg is bent and the foot planted firmly. The Capoeirista's upper body remains upright, allowing them to quickly shift their weight and respond to various attacks.</p>
-				<p><b>Purpose:</b> Negativa serves multiple purposes in Capoeira, including evading sweeps, kicks, and low strikes from the opponent. It also allows the Capoeirista to maintain balance and quickly respond with counterattacks or transitions to other movements.</p>
-				<p><b>Use in the Game:</b> Capoeiristas use Negativa strategically within the roda (the Capoeira circle) to evade attacks and create opportunities for counterattacks. It's often used to demonstrate control, agility, and grace in the game.</p>
-				<p><b>Variations:</b> There are several variations of Negativa, depending on how one positions their arms, angles their body, or transitions to other movements. Common Negativa variations include Negativa de Angola, Negativa de Regional, and Negativa com Esquiva, each with its unique characteristics.</p>
-				<p><b>Transition:</b> After performing Negativa, Capoeiristas can transition into various movements, such as kicks, rolls, or escapes, depending on the situation and their style of Capoeira.</p>
-				<p><b>Training:</b> Practicing Negativa is essential for developing core strength, balance, flexibility, and the ability to quickly react to the opponent's movements.</p>
+				<p><b>Description:</b> Negativa is characterized by a seated position with one knee bent, while the other leg is straight, positioned to the side in the direction of an incoming strike. The upper body of the Capoeirista is slightly bent backward in the direction of the strike, allowing them to quickly redistribute weight and respond to various attacks.</p>
+				<p><b>Purpose:</b> Negativa serves the function of evading opponent strikes. It also enables the Capoeirista to maintain balance and respond quickly with counterattacks or transitions to other movements.</p>
+				<p><b>Use in the Game:</b> Capoeiristas strategically employ Negativa within the roda (the Capoeira circle) to dodge attacks and create opportunities for counterattacks. It is often used to demonstrate control, agility, and grace in the game.</p>
+				<p><b>Variations:</b> There are several variations of Negativa, depending on how one positions their arms, the angles of their body, or transitions to other movements. Common Negativa variations include Negativa de Angola, Negativa de Regional, and Negativa com Esquiva, each with its unique characteristics.</p>
+				<p><b>Transition:</b> After performing Negativa, Capoeiristas can transition into various movements, such as strikes or acrobatic elements, depending on the situation and their style of Capoeira.</p>
+				<p><b>Training:</b> Practicing Negativa is necessary for developing core strength, balance, flexibility, and the ability to quickly react to opponent movements.</p>
             </div>
 
         </div>
