--- a/role.html
+++ b/role.html
@@ -75,12 +75,11 @@
 
 			<div class="content">
 				<h3 style="margin-top: 1.5rem;">Rolê</h3>
-				<p><b>Acrobatic Roll:</b> The role involves a rolling motion where a Capoeirista (practitioner of Capoeira) tucks their body into a forward somersault-like roll, smoothly transitioning from a standing position to a rolling one. It's often performed when an opponent executes a high kick or an attack to evade the incoming strike while maintaining balance.</p>
-				<p><b>Evasion and Defense:</b> The primary purpose of the role is evasion and defense. Capoeiristas use this movement to avoid their opponent's attacks, typically performed when an opponent executes a "macaco" (aerial cartwheel) kick or other high, sweeping kicks.</p>
-				<p><b>Counter-Attack:</b> While the primary focus is defense, Capoeiristas can turn the rolê into a counter-attack. After evading an opponent's move, the practitioner can swiftly rise from the roll and launch a counter-kick or other offensive maneuver, taking advantage of the opponent's momentary vulnerability.</p>
-				<p><b>Fluid Transition:</b> The rolê is executed with fluidity and grace, emphasizing the acrobatic and artistic aspects of Capoeira. It's a dynamic and visually impressive movement that adds excitement to the game.</p>
-				<p><b>Variations:</b> There are variations of the rolê. For instance, "rolê negativa" combines the roll with a negativa stance (a low, defensive stance). This variation is often used in regional styles of Capoeira.</p>
-				<p><b>Safety and Technique:</b> Executing the rolê correctly and safely requires training and proper technique. It's essential for Capoeiristas to master the mechanics of the roll to avoid injury.</p>
+				<p><b>Acrobatic Roll:</b> The rolê is a movement resembling a wheel, but the capoeirista keeps their feet on the ground. It is performed to evade an incoming strike while smoothly transitioning.</p>
+				<p><b>Evasion and Defense:</b> The primary purpose of the rolê is evasion and defense. Capoeiristas use this movement to avoid their opponent's attacks, embellish the game, or prepare for their own attack.</p>
+				<p><b>Counter-Attack:</b> Despite the main focus on defense, capoeiristas can turn the rolê into a counter-attack. After dodging the opponent's movement, the practitioner can quickly rise from the movement and launch a counter-strike or another offensive move, taking advantage of the opponent's momentary vulnerability.</p>
+				<p><b>Fluid Transition:</b> The rolê is executed with fluidity and grace, emphasizing the acrobatic and artistic aspects of Capoeira. It is a dynamic and visually impressive movement that adds excitement to the game.</p>
+				<p><b>Variations:</b> There are several variations of the rolê. For example, "rolê negativa" combines the roll with a negativa stance (a low defensive posture). This variation is often used in regional styles of Capoeira.</p>
             </div>
 
         </div>
