--- a/list_move.html
+++ b/list_move.html
@@ -74,7 +74,7 @@
 
 			<h2><a href="takedowns.html" class="btn">Takedowns</a></h2>
 
-			<h2><a href="#" class="btn">Acrobatics</a></h2>
+			<h2><a href="acrobatics.html" class="btn">Acrobatics</a></h2>
 
 		</div>
 
