--- a/about us.html
+++ b/about us.html
@@ -60,7 +60,7 @@
     <div class="hero">
 
         <video autoplay loop muted plays-inline class="back-video">
-            <source src="videos/трейлер.mp4">
+            <source src="трейлер.mp4">
         </video>
         <div class="content">
             <h1>About Us</h1>
