--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
-	<link rel="stylesheet" href="history try_1.css">
+	<link rel="stylesheet" href="history.css">
 	<script src="" defer></script>
 
 </head>
