--- a/mestres.html
+++ b/mestres.html
@@ -509,7 +509,7 @@
             </div>
 
             <div class="box_m">
-                <img src="images/gavial.jpg">
+                <img src="gavial.jpg">
                 <div class="info">
                     <h3>Gavial (2017)</h3>
                     <h2>(Flávio)</h2>
