--- a/troca.html
+++ b/troca.html
@@ -75,13 +75,13 @@
 
 			<div class="content">
 				<h3 style="margin-top: 1.5rem;">Troca</h3>
-				<p><b>Change of Command:</b> Troca de Comando directly translates to "change of command" in Portuguese. It signifies a moment in the Capoeira game when one player, while engaged with an opponent, decides to transition into a different move or stance.</p>
-				<p><b>Versatility:</b> The Troca is a versatile technique that allows the Capoeirista to switch from one type of movement or position to another. This can involve moving from an upright stance to a lower ground position, such as a crouch or negativa, or transitioning from one defensive or offensive posture to another.</p>
+				<p><b>Change of Command:</b> Troca directly translates as "change of command" in Portuguese. It denotes a moment in the Capoeira game when one player, engaged with an opponent, decides to transition into a different movement or stance.</p>
+				<p><b>Versatility:</b> The Troca technique is versatile, allowing the Capoeirista to switch from one type of movement or position to another. This may involve transitioning from an upright stance to a lower ground position, such as a crouch or negativa, or changing from one defensive or offensive posture to another.</p>
 				<p><b>Fluidity:</b> Troca is all about maintaining fluidity and rhythm within the Capoeira game. It enables practitioners to smoothly adapt to the changing dynamics of the roda (the circle where Capoeira is played) while keeping the game dynamic and engaging.</p>
-				<p><b>Strategic Element:</b> Troca is a strategic element in Capoeira, as it allows a player to react to an opponent's movements and change their position to gain a tactical advantage. It can be used for defensive purposes to evade an opponent's attack or for offensive purposes to set up a counter-attack.</p>
+				<p><b>Strategic Element:</b> Troca is a strategic element in Capoeira, enabling a player to react to an opponent's movements and change their position to gain a tactical advantage. It can be used defensively to evade an opponent's attack or offensively to set up a counter-attack.</p>
 				<p><b>Footwork:</b> Troca often involves intricate footwork, where the Capoeirista may perform steps, spins, or quick movements to change their position. It showcases agility and skill in navigating the roda.</p>
                 <p><b>Musicality:</b> Troca can be performed in time with the music in the roda. It adds to the rhythmic and dynamic aspects of the game, blending physical movement with the musical instruments and songs that accompany Capoeira.</p>
-                <p><b>Training:</b> Practitioners of Capoeira train to execute Troca de Comando effectively. It requires a deep understanding of the art form's movements, rhythm, and strategy.</p>
+                <p><b>Training:</b> Capoeira practitioners train to execute Troca effectively, requiring a deep understanding of the art form's movements and strategy.</p>
             </div>
 
         </div>
