--- a/quotes.html
+++ b/quotes.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
-	<link rel="stylesheet" href="quotes try.css">
+	<link rel="stylesheet" href="quotes.css">
 	<script src="" defer></script>
 
 </head>
