--- a/acrobatics.html
+++ b/acrobatics.html
@@ -64,15 +64,11 @@
         <h1 class="heading"><span>Acrobatics</span></h1>
         <div class="list">
 
-			<h2><a href="au.html" class="btn"></a></h2>
+			<h2><a href="au.html" class="btn">Au</a></h2>
 
-			<h2><a href="au sem mao.html" class="btn"></a></h2>
+			<h2><a href="au sem mao.html" class="btn">Au sem Mão</a></h2>
 
-			<h2><a href="au fechado.html" class="btn"></a></h2>
-
-			<h2><a href="#" class="btn"></a></h2>
-
-			<h2><a href="#" class="btn"></a></h2>
+			<h2><a href="au fechado.html" class="btn">Au Fechado</a></h2>
 
 
 		</div>
