--- a/quotes.html
+++ b/quotes.html
@@ -75,7 +75,7 @@
 
 			<div class="card">
 				<div class="img-box">
-					<img src="https://i.ibb.co/KrR0Nd3/paulo-flores.jpg">
+					<img src="PF.png">
 				</div>
 				<div class="card-content">
 					<h1 class="card-heading">- Mestre Paulo -</h1>
@@ -85,7 +85,7 @@
 
 			<div class="card">
 				<div class="img-box">
-					<img src="https://i.ibb.co/SrcQ0YS/toni-vargas.jpg">
+					<img src="TV.png">
 				</div>
 				<div class="card-content">
 					<h1 class="card-heading">- Mestre Toni Vargas -</h1>
@@ -95,7 +95,7 @@
 
 			<div class="card">
 				<div class="img-box">
-					<img src="https://bluesnakeblog.files.wordpress.com/2007/07/nestorcapoeira.jpg?w=376&h=540">
+					<img src="Nestor Capoeira.jpg">
 				</div>
 				<div class="card-content">
 					<h1 class="card-heading">- Nestor Capoeira -</h1>
@@ -111,7 +111,7 @@
 
 			<div class="card">
 				<div class="img-box">
-					<img src="https://www.capoeirashop.fr/modules/prestablog/views/img/grid-for-1-7/up-img/5.jpg">
+					<img src="Pastinha.png">
 				</div>
 				<div class="card-content">
 					<h1 class="card-heading">- Mestre Pastinha -</h1>
@@ -136,7 +136,7 @@
 
 			<div class="card">
 				<div class="img-box">
-					<img src="https://upload.wikimedia.org/wikipedia/pt/d/d2/Mestre_Bimba.jpg">
+					<img src="Mestre Bimba.png">
 				</div>
 				<div class="card-content">
 					<h1 class="card-heading">- Mestre Bimba -</h1>
@@ -164,7 +164,7 @@
 
 			<div class="card">
 				<div class="img-box">
-					<img src="https://i.discogs.com/uWVZET48QuOFWdZTCN_0necUdrSYffTb2-EXSx5BA9o/rs:fit/g:sm/q:40/h:300/w:300/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9BLTYxNjg0/NDQtMTU5NzUwNzM2/My0zMTkyLnBuZw.jpeg">
+					<img src="Mestre Brasilia.png">
 				</div>
 				<div class="card-content">
 					<h1 class="card-heading">- Mestre Brasilia -</h1>
