--- a/handbook.html
+++ b/handbook.html
@@ -133,7 +133,7 @@
 				<div class="content">
 					<h3>Maculele</h3>
 					<p>Maculele is an important and beautiful part of capoeira. Here you can find tutorials on all the movements and their descriptions, which will allow you to better understand this dance and delve deeper into the art of capoeira.</p>
-					<a href="#" class="btn">Learn more...</a>
+					<a href="maculele.html" class="btn">Learn more...</a>
 				</div>
     
             </div>
