--- a/jdd.html
+++ b/jdd.html
@@ -63,6 +63,8 @@
             <div class="book">
                 <div class="video">
                     <iframe  width="400" height="150" src="https://www.youtube.com/embed/0TbMLM9GclM" frameborder="0" loading="lazy"></iframe>
+                    <iframe  width="400" height="150" src="https://www.youtube.com/embed/YjjfGieET6E?si=l5ihyvjXDrb1ttTv" frameborder="0" loading="lazy"></iframe>
+                    <iframe  width="400" height="150" src="https://www.youtube.com/embed/9MurHjR8P4w?si=1BTC6f7ww3kmfEKu" frameborder="0" loading="lazy"></iframe>
                 </div>
                 <div class="content">
                     <h2>Jogo de Dentro</h2>
