--- a/amazonas.html
+++ b/amazonas.html
@@ -63,13 +63,13 @@
             <div class="book">
                 <div class="video">
                     <iframe  width="400" height="150" src="https://www.youtube.com/embed/gDekuxhv8v8?si=DWSxluTXCxkiNPqJ" frameborder="0" loading="lazy"></iframe>
+                    <iframe  width="400" height="150" src="https://www.youtube.com/embed/yIGJdRUJZ6w?si=L91wjySyKY66zev5" frameborder="0" loading="lazy"></iframe>
+                    <iframe  width="400" height="150" src="https://www.youtube.com/embed/BMLlPl5GnTI?si=TyhsXT5bYyqtghS6" frameborder="0" loading="lazy"></iframe>
                 </div>
                 <div class="content">
                     <h2>Amazonas (Tico Tico)</h2>
-                    <p>A rhythm of celebration used to greet visiting Mestres or other special guests that arrived to the roda.</p>
-                    <p>With this toque, we encountered a few dificulties in trying to decide exactly how to present the rythm and transcription.</p>
-                    <p>Although we have the original recordings to listen to, you will find if you locate a copy of the album, that each track is full of “repiques” or variations all the way through. There is therefore some confusion/debate, particularly with this toque which is longer and more complex, as to which parts are the base rhythm, and which are variations.</p>
-                    <p>The symbol at the start of the transcription is an upbeat – a not uncommon feature of many toques of capoeira is that it is usual to start playing the rhythm with the last quaternote of the final bar (usually, as in the case here, a Txi for the berimbau).</p>
+                    <p>The Amazonas rhythm is also associated with the Orixá Oxóssi in Afro-Brazilian religion. Oxóssi is the deity of the hunt and is often depicted as a skilled archer. In Capoeira, the Amazonas rhythm is sometimes used to honor Oxóssi and to invoke his strength and agility in the game.</p>
+                    <p>Additionally, the Amazonas rhythm is often played during Capoeira graduations and ceremonies, adding to the sense of solemnity and tradition surrounding these events.</p>
                 </div>
             </div>
         </div>
