--- a/paulo flores.html
+++ b/paulo flores.html
@@ -71,7 +71,7 @@
 
             <div class="media">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/-EYdrQj1n1g" frameborder="0" loading="lazy"></iframe>
-	            <img style="margin-top: 2rem;" src="images/paulo flores.jpg" frameborder="0" loading="lazy">
+	            <img style="margin-top: 2rem;" src="paulo flores.jpg" frameborder="0" loading="lazy">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/XKolFAmYwDk" frameborder="0" loading="lazy"></iframe>
             </div>
 
