--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     
         </section>
 
-        <section id="docs" id="#handbook">
+        <section id="docs" id="handbook">
     
             <div class="book-list">
 
