--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <section id="docs">
     
-            <div class="book-list" id="handbook">
+            <div class="book-list" id="archi">
 
 				<img src="https://i.pinimg.com/564x/d4/8a/5c/d48a5c1f1db7aeb2580a175568a98909.jpg">	
 				<div class="content">
