--- a/find out.html
+++ b/find out.html
@@ -62,7 +62,7 @@
         <div class="find">
             <h3>SENZALA <h3 style="color: darkred; text-shadow: -1px -1px 0 rgb(240, 183, 27), 1px -1px 0 rgb(240, 183, 27), -1px 1px 0 rgb(240, 183, 27), 1px 1px 0 rgb(240, 183, 27);">Odyssey</h3>            <div class="content_2">
 			<div class="content_2">
-				<p>"The Darkside of Senzala" is a website that will immerse you in the amazing world of capoeira and provide useful information for beginners and experienced practitioners. Here you will find not only basic techniques, but also exclusive photos, videos, and quotes that will help you understand the art of capoeira more deeply. In addition, the site features all the rhythms, the history of the school, as well as movies, books, and music about capoeira. "The Darkside of Senzala" is not just a website, it is an opportunity to join the global family of the Senzala school and learn more about its cultural roots and unique style.</p>
+				<p>"Senzala Odyssey" is a website that will immerse you in the amazing world of capoeira and provide useful information for beginners and experienced practitioners. Here you will find not only basic techniques, but also exclusive photos, videos, and quotes that will help you understand the art of capoeira more deeply. In addition, the site features all the rhythms, the history of the school, as well as movies, books, and music about capoeira. "The Darkside of Senzala" is not just a website, it is an opportunity to join the global family of the Senzala school and learn more about its cultural roots and unique style.</p>
 			</div>
 		</div>
 	</section>
