--- a/mestres.html
+++ b/mestres.html
@@ -637,7 +637,7 @@
 
             <div class="card">
 				<div class="img-box">
-					<img src="images/mestre tyson_edited.jpg">
+					<img src="mestre tyson_edited.jpg">
 				</div>
 				<div class="card-content">
 					<h1 class="card-heading">- Tyson (2019) -</h1>
