--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <section id="docs">
     
-            <div class="book-list" id="archi">
+            <div class="book-list" id="handbook">
 
 				<img src="https://i.pinimg.com/564x/d4/8a/5c/d48a5c1f1db7aeb2580a175568a98909.jpg">	
 				<div class="content">
@@ -121,12 +121,12 @@
 
 	<!--contact section starts-->
 	<section class="contact" id="contact">
+		<form action="">
+			<h3>Get in touch</h3>
+			<p>Here are the contacts and addresses of the Senzala Capoeira school masters worldwide. They are ready to share their experience and passion for capoeira, creating a true international Senzala family. No matter where you are, you can find a home in the world of capoeira and connect with our dedicated masters. Welcome to the united Senzala family, where love for the art brings us together across borders and cultures.</p>
+		</form>
 		<div class="cont">
 			<iframe class="map" style="border: none;" src="https://nazariksenpai.github.io/Senzala-Map/" allowfullscreen="" loading="lazy"></iframe>
-			<form action="">
-				<h3>Get in touch</h3>
-				<p>Here are the contacts and addresses of the Senzala Capoeira school masters worldwide. They are ready to share their experience and passion for capoeira, creating a true international Senzala family. No matter where you are, you can find a home in the world of capoeira and connect with our dedicated masters. Welcome to the united Senzala family, where love for the art brings us together across borders and cultures.</p>
-			</form>
 		</div>
 	</section>
 	<!--contact section ends-->
@@ -157,4 +157,5 @@
 	<!--footer section ends-->
 </body>
 </html>
+
 
