--- a/vargas.html
+++ b/vargas.html
@@ -71,7 +71,7 @@
 
             <div class="media">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/HeSvG4FWTbo" frameborder="0" loading="lazy"></iframe>
-	            <img style="margin-top: 2rem;" src="https://lastfm.freetls.fastly.net/i/u/ar0/90bffade7b2d407a82a05362ce8e707f.jpg" frameborder="0" loading="lazy">
+	            <img style="margin-top: 2rem;" src="TV.png" frameborder="0" loading="lazy">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/7KWshfh2Itg" frameborder="0" loading="lazy"></iframe>
             </div>
 
