--- a/ramos.html
+++ b/ramos.html
@@ -71,7 +71,7 @@
 
             <div class="media">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/16ZgvixxQrc" frameborder="0" loading="lazy"></iframe>
-	            <img style="margin-top: 2rem;" src="images/ramos.jpg" frameborder="0" loading="lazy">
+	            <img style="margin-top: 2rem;" src="https://i.ibb.co/zQ3DZ9Q/Ramos.jpg" frameborder="0" loading="lazy">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/J-3wx44PXtE" frameborder="0" loading="lazy"></iframe>
             </div>
 
