--- a/zumbi.html
+++ b/zumbi.html
@@ -71,7 +71,7 @@
 
             <div class="media">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/jYnBpwEcrKU?si=WzO02P6ygvgEJptC" frameborder="0" loading="lazy"></iframe>
-	            <img style="margin-top: 2rem;" src="https://us-wbe-img.gr-cdn.com/user/9fb6546d-cef8-42aa-9b81-d075a3d9623a/e5a7082c-179d-4c59-85d9-89ff169df335.jpg" frameborder="0" loading="lazy">
+	            <img style="margin-top: 2rem;" src="https://i.postimg.cc/Hxz1byjK/zumbi.jpg" frameborder="0" loading="lazy">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/9QE8Em0jG8Q?si=OJp1i2eMuBlrdRzd" frameborder="0" loading="lazy"></iframe>
             </div>
 
