--- a/caracu.html
+++ b/caracu.html
@@ -72,7 +72,7 @@
 
             <div class="media">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/nDAF9vJ8DJ4?si=BbJefkN7FO3dPz8o" frameborder="0" loading="lazy"></iframe>
-	            <img style="margin-top: 2rem;" src="images/caracu.jpg" frameborder="0" loading="lazy">
+	            <img style="margin-top: 2rem;" src="https://i.ibb.co/KqFQsSw/caracu.jpg" frameborder="0" loading="lazy">
 				<iframe style="margin-top: 2rem;" src="https://www.youtube.com/embed/pNoshkOeR68?si=FnhVTLFbyXz4YPm7" frameborder="0" loading="lazy"></iframe>
             </div>
 
