--- a/handbook.html
+++ b/handbook.html
@@ -128,7 +128,7 @@
     
             <div class="book-list">
 
-				<div class="image"><img src="https://i.pinimg.com/564x/a5/13/4a/a5134a4c4bda9c8e3e6c9161d5b261da.jpg"></div>
+				<div class="image"><img src="https://i.postimg.cc/6Qzj3Wd2/mac.jpg"></div>
 
 				<div class="content">
 					<h3>Maculele</h3>
