--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<!--home section starts-->
 	<section class="home" id="home">
 		<div class="content_1">
-			<h3>SENZALA<h3 style="color: darkred; text-shadow: -1px -1px 0 rgb(240, 183, 27), 1px -1px 0 rgb(240, 183, 27), -1px 1px 0 rgb(240, 183, 27), 1px 1px 0 rgb(240, 183, 27);">Odyssey</h3></h3>
+			<h3>SENZALA<h3 style="color: darkred; text-shadow: -1px -1px 0 rgb(240, 183, 27), 1px -1px 0 rgb(240, 183, 27), -1px 1px 0 rgb(240, 183, 27), 1px 1px 0 rgb(240, 183, 27);">Wiki</h3></h3>
 			<p>Over 50 years of history, dozens of masters, thousands of students on different continents and, without exaggeration, worldwide recognition - all this is about the Senzala school. Looking objectively, this is no longer just one school, but a whole family of schools that unite common history, traditions, similar techniques and strong friendship.</p>
 			<a href="find out.html" class="btn">Find out more...</a>
 		</div>
