--- a/about us.html
+++ b/about us.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
-	<link rel="stylesheet" href="Movements.css">
+	<link rel="stylesheet" href="about us try.css">
 	<script src="" defer></script>
 
 </head>
